Fix: CSS and layout issues preventing anything from rendering

--- a/packages/app-viewer/styles/light-theme.less
+++ b/packages/app-viewer/styles/light-theme.less
@@ -1,3 +1,5 @@
+// main: ./index.less
+
 /* Taken from the Dashbook proposal mockup: https://codepen.io/anon/pen/LmMzNv?editors=1100 */
 
 @padding-normal: 0.5em;
@@ -20,6 +22,14 @@ body {
   margin: 0;
   font-family: @ui-font;
   background-color: @foreground-color;
+}
+
+div.m-ViewerShell {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
 }
 
 mainapp > .m-Viewer {
